// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Send render should render ens error 1`] = `
<div class="app-page send-page">
    <div class="section is-narrow">
        <div class="container is-narrow">
            <div class="card app-card main-app-card">
                <div class="card-header">
                    <h1 class="card-header-title">Send ETH</h1>
                </div>
                <div class="card-content">
                    <v-form id="sendEther" v-on:submit="bound handleTransactionFormSubmit">
                        <div class="field">
                            <label class="label">
                                To
                            </label>
                            <account-chooser creatable="true" width="35" accounts="" placeholder="0x... or ENS" v-model="address"></account-chooser>
                            <!---->
                            <p class="help is-danger">
                                foo
                            </p>
                        </div>
                        <div class="send-amount field is-horizontal">
                            <div class="field-label is-normal">
                                <label for="amount" class="label">
                                    Amount
                                </label>
                            </div>
                            <div class="field-body">
                                <v-input id="value" validator="required|decimal:18|between:0,1" type="number" min="0" step="any" name="value" data-vv-as="amount" aria-describedby="value" placeholder="Amount" required="" v-model="value"><span slot="addon" class="select"><v-select options="[object Object],AAA" name="currencies" v-model="transaction.tokenInfo"></v-select></span>
                                    <a slot="icon" title="Send entire balance" v-on:click="bound setMaxAmount"><span class="icon is-small is-right">{}</span></a>
                                </v-input>
                                <v-input id="price" validator="required|decimal:2|between:0,399.99" type="number" min="0" step="0.01" name="price" aria-describedby="price" placeholder="Price" required="" v-model="price">
                                    <div slot="addon" class="control">
                                        <a class="button is-static">USD</a>
                                    </div>
                                </v-input>
                            </div>
                        </div>
                        <div class="priority-options field is-horizontal">
                            <div class="field-label">
                                <label class="label">Priority</label>
                            </div>
                            <div class="field-body">
                                <v-radio id="priority" options="[object Object],[object Object],[object Object]" name="priority" v-model="transaction.gasPrice"></v-radio>
                            </div>
                        </div>
                        <div class="advanced-options-container">
                            <div class="field advanced-toggle is-horizontal">
                                <div class="field-label"></div>
                                <div class="field-body">
                                    <a v-on:click="bound toggleShowAdvanced" class="has-text-link">
                                        Advanced Options...
                                    </a>
                                </div>
                            </div>
                            <div v-show="showAdvanced" class="advanced-options" style="display: none;">
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Gas Price</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="gasPrice" name="gasPrice" type="number" min="1" max="100" step="1" validator="required|numeric|integer|between:1,100" aria-describedby="gasPrice" placeholder="Gas price" required="" v-model="transaction.gasPrice">
                                            <div slot="addon" class="control">
                                                <a class="button is-static">Gwei</a>
                                            </div>
                                        </v-input>
                                    </div>
                                </div>
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Gas Limit</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="gasLimit" name="gasLimit" type="number" min="21000" max="1000000" step="1000" validator="required|numeric|integer|between:21000,4000000" aria-describedby="gasLimit" placeholder="Gas limit" required="" v-model="transaction.gasLimit"></v-input>
                                    </div>
                                </div>
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Nonce</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="nonce" validator="required|numeric|integer|min_value:0" name="nonce" type="number" step="1" aria-describedby="nonce" placeholder="Nonce" required="" v-on:input="bound setTrxNonce" v-model="userNonce"></v-input>
                                    </div>
                                </div>
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Data</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="data" name="data" validator="required|hex" aria-describedby="data" placeholder="Data" required="" v-show="!transaction.tokenInfo" v-model="transaction.data"></v-input>
                                    </div>
                                </div>
                            </div>
                        </div>
                        <div class="field is-horizontal">
                            <div class="field-label"></div>
                            <div class="field-body">
                                <v-button disabled="true" class-name="is-success is-medium is-cta" data-test="transaction-send-button">
                                    Send
                                </v-button>
                            </div>
                        </div>
                    </v-form>
                    <!---->
                </div>
            </div>
        </div>
    </div>
    <!---->
    <!---->
</div>
`;

exports[`Send render should render resolved ens address 1`] = `
<div class="app-page send-page">
    <div class="section is-narrow">
        <div class="container is-narrow">
            <div class="card app-card main-app-card">
                <div class="card-header">
                    <h1 class="card-header-title">Send ETH</h1>
                </div>
                <div class="card-content">
                    <v-form id="sendEther" v-on:submit="bound handleTransactionFormSubmit">
                        <div class="field">
                            <label class="label">
                                To
                            </label>
                            <account-chooser creatable="true" width="35" accounts="" placeholder="0x... or ENS" v-model="address"></account-chooser>
                            <p class="help ellipsis">
                                Resolved ENS address: 0x0
                            </p>
                            <!---->
                        </div>
                        <div class="send-amount field is-horizontal">
                            <div class="field-label is-normal">
                                <label for="amount" class="label">
                                    Amount
                                </label>
                            </div>
                            <div class="field-body">
                                <v-input id="value" validator="required|decimal:18|between:0,1" type="number" min="0" step="any" name="value" data-vv-as="amount" aria-describedby="value" placeholder="Amount" required="" v-model="value"><span slot="addon" class="select"><v-select options="[object Object],AAA" name="currencies" v-model="transaction.tokenInfo"></v-select></span>
                                    <a slot="icon" title="Send entire balance" v-on:click="bound setMaxAmount"><span class="icon is-small is-right">{}</span></a>
                                </v-input>
                                <v-input id="price" validator="required|decimal:2|between:0,399.99" type="number" min="0" step="0.01" name="price" aria-describedby="price" placeholder="Price" required="" v-model="price">
                                    <div slot="addon" class="control">
                                        <a class="button is-static">USD</a>
                                    </div>
                                </v-input>
                            </div>
                        </div>
                        <div class="priority-options field is-horizontal">
                            <div class="field-label">
                                <label class="label">Priority</label>
                            </div>
                            <div class="field-body">
                                <v-radio id="priority" options="[object Object],[object Object],[object Object]" name="priority" v-model="transaction.gasPrice"></v-radio>
                            </div>
                        </div>
                        <div class="advanced-options-container">
                            <div class="field advanced-toggle is-horizontal">
                                <div class="field-label"></div>
                                <div class="field-body">
                                    <a v-on:click="bound toggleShowAdvanced" class="has-text-link">
                                        Advanced Options...
                                    </a>
                                </div>
                            </div>
                            <div v-show="showAdvanced" class="advanced-options" style="display: none;">
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Gas Price</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="gasPrice" name="gasPrice" type="number" min="1" max="100" step="1" validator="required|numeric|integer|between:1,100" aria-describedby="gasPrice" placeholder="Gas price" required="" v-model="transaction.gasPrice">
                                            <div slot="addon" class="control">
                                                <a class="button is-static">Gwei</a>
                                            </div>
                                        </v-input>
                                    </div>
                                </div>
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Gas Limit</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="gasLimit" name="gasLimit" type="number" min="21000" max="1000000" step="1000" validator="required|numeric|integer|between:21000,4000000" aria-describedby="gasLimit" placeholder="Gas limit" required="" v-model="transaction.gasLimit"></v-input>
                                    </div>
                                </div>
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Nonce</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="nonce" validator="required|numeric|integer|min_value:0" name="nonce" type="number" step="1" aria-describedby="nonce" placeholder="Nonce" required="" v-on:input="bound setTrxNonce" v-model="userNonce"></v-input>
                                    </div>
                                </div>
                                <div class="field is-horizontal">
                                    <div class="field-label">
                                        <label class="label">Data</label>
                                    </div>
                                    <div class="field-body">
                                        <v-input id="data" name="data" validator="required|hex" aria-describedby="data" placeholder="Data" required="" v-show="!transaction.tokenInfo" v-model="transaction.data"></v-input>
                                    </div>
                                </div>
                            </div>
                        </div>
                        <div class="field is-horizontal">
                            <div class="field-label"></div>
                            <div class="field-body">
                                <v-button class-name="is-success is-medium is-cta" data-test="transaction-send-button">
                                    Send
                                </v-button>
                            </div>
                        </div>
                    </v-form>
                    <!---->
                </div>
            </div>
        </div>
    </div>
    <!---->
    <!---->
</div>
`;
